local-environment/config/networkpolicy/prod-calico-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: production-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
